--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -3,6 +3,8 @@
     xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+     android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     android:padding="5dp" >
 
     <LinearLayout
