--- a/res/layout/activity_order_details.xml
+++ b/res/layout/activity_order_details.xml
@@ -268,7 +268,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="start"
                         android:padding="3dp"
                         android:textColor="@color/black"
                         android:textSize="13sp"
