--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -1,7 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res/com.sabrentkaro"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/srkbg" >
 
     <ImageView
         android:layout_width="match_parent"
@@ -10,4 +12,28 @@
         android:src="@drawable/splash" >
     </ImageView>
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_margin="5dp"
+        android:background="@drawable/border_black_semi"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="5dp" >
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+
+        <com.utils.CustomTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/loading_"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            custom:fonttype="trebuchet_ms" />
+    </LinearLayout>
+
+</FrameLayout>
