--- a/res/layout/activity_product_details.xml
+++ b/res/layout/activity_product_details.xml
@@ -402,270 +402,10 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/rootFieldsValues"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:text="@string/brand"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-
-                <com.utils.CustomTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:padding="3dp"
-                    android:text="@string/_"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    custom:fonttype="trebuchet_ms" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:id="@+id/txtBrand"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:text="@string/model"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-
-                <com.utils.CustomTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:padding="3dp"
-                    android:text="@string/_"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    custom:fonttype="trebuchet_ms" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:id="@+id/txtModel"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:text="@string/type"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-
-                <com.utils.CustomTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:padding="3dp"
-                    android:text="@string/_"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    custom:fonttype="trebuchet_ms" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:id="@+id/txtType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layoutCapacity"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:text="@string/capacity"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-
-                <com.utils.CustomTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:padding="3dp"
-                    android:text="@string/_"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    custom:fonttype="trebuchet_ms" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:id="@+id/txtCapacity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/layoutTonnage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:text="@string/tonnage"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
-
-                <com.utils.CustomTextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:padding="3dp"
-                    android:text="@string/_"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    custom:fonttype="trebuchet_ms" />
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical" >
-
-                    <com.utils.CustomTextView
-                        android:id="@+id/txtTonnage"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical"
-                        android:padding="3dp"
-                        android:textColor="@color/black"
-                        android:textSize="13sp"
-                        custom:fonttype="trebuchet_ms" />
-                </LinearLayout>
+                android:orientation="vertical" >
             </LinearLayout>
 
             <com.utils.CustomTextView
